--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <!-- Estilos (sem dependências externas) -->
+  <!-- Estilos -->
   <style>
     :root{--bg:#f1f5f9;--card:#fff;--muted:#64748b;--brand:#16a34a;--text:#0f172a}
     *{box-sizing:border-box;font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Arial,sans-serif}
@@ -22,12 +22,12 @@
     @media(min-width:1024px){.wrap{grid-template-columns:2fr 3fr}}
     .card{background:#fff;border-radius:16px;box-shadow:0 6px 20px rgba(2,8,23,.08);padding:20px}
     .a4{
-      width: 794px;          /* ~210mm a ~96dpi */
-      height: 1123px;        /* ~297mm a ~96dpi */
+      width: 794px;     /* 210mm em ~96dpi */
+      height: 1123px;   /* 297mm em ~96dpi */
       background:#fff;
       border-radius:16px;
       box-shadow:0 6px 20px rgba(2,8,23,.08);
-      overflow:hidden;       /* impede crescimento vertical que cortava no PDF */
+      overflow:hidden;
     }
     @media(max-width:820px){.a4{width:100%}}
     h1{font-size:22px;margin:0 0 6px}
@@ -50,7 +50,7 @@
     .total .price{font-size:22px;color:#065f46;font-weight:800}
   </style>
 
-  <!-- libs para imagem e PDF -->
+  <!-- libs -->
   <script defer src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 </head>
@@ -74,10 +74,9 @@
         <input id="in-data" />
 
         <label style="grid-column:1/-1">Observações (opcional)</label>
-        <textarea id="in-obs" rows="3" placeholder="Ex.: Preço válido por 10 dias; não inclui reforço estrutural..."></textarea>
+        <textarea id="in-obs" rows="3" placeholder="Ex.: Preço válido por 10 dias..."></textarea>
       </div>
       <div style="padding-top:10px"><button id="btn-pdf" class="btn">Exportar PDF</button></div>
-      <p class="muted">Dica: instale como app (Adicionar à Tela Inicial).</p>
     </aside>
 
     <!-- Páginas -->
@@ -117,11 +116,11 @@
                 <div class="muted">Itens Inclusos</div>
                 <ul>
                   <li id="out-inv-list">Inversor incluso</li>
-                  <li id="out-mod-list">Módulos fotovoltaicos inclusos</li>
-                  <li>Estrutura de fixação para telhado</li>
+                  <li id="out-mod-list">Módulos inclusos</li>
+                  <li>Estrutura de fixação</li>
                   <li>Homologação junto à concessionária</li>
                   <li>Projeto, Instalação e Material elétrico</li>
-                  <li>Monitoramento e Assessoria de obras</li>
+                  <li>Monitoramento e Assessoria</li>
                 </ul>
                 <div class="total"><span class="muted">Total</span><span class="price" id="out-preco">—</span></div>
                 <div class="muted" id="out-obs" style="margin-top:6px"></div>
@@ -131,17 +130,17 @@
 
           <section>
             <h3>Prazo de Entrega</h3>
-            <div class="muted">Sistema homologado e operando: prazo médio de <b>35 dias</b>.</div>
+            <div class="muted">Sistema homologado em <b>35 dias</b>.</div>
           </section>
 
           <section>
             <h3>Garantias</h3>
             <ul class="kv" style="grid-template-columns:1fr 2fr">
-              <div>Módulos (eficiência):</div><div><b>30 anos</b>.</div>
-              <div>Módulos (fabricação):</div><div><b>15 anos</b>.</div>
-              <div>Inversores:</div><div>10 anos.</div>
-              <div>Estrutura:</div><div>10 anos.</div>
-              <div>Serviço de instalação:</div><div>1 ano.</div>
+              <div>Módulos (eficiência):</div><div><b>30 anos</b></div>
+              <div>Módulos (fabricação):</div><div><b>15 anos</b></div>
+              <div>Inversores:</div><div>10 anos</div>
+              <div>Estrutura:</div><div>10 anos</div>
+              <div>Instalação:</div><div>1 ano</div>
             </ul>
           </section>
         </div>
@@ -151,7 +150,7 @@
       <div id="page2" class="a4" style="padding:24px">
         <h2 style="color:#16a34a">Condições Comerciais</h2>
         <ul>
-          <li><b>Forma de pagamento:</b> À vista, financiamento ou cartão de crédito.</li>
+          <li><b>Forma de pagamento:</b> À vista, financiamento ou cartão.</li>
           <li><b>Validade:</b> 10 dias.</li>
           <li><b>Prazo de instalação:</b> 35 dias.</li>
           <li><b>Garantias:</b> conforme página anterior.</li>
@@ -161,116 +160,54 @@
   </div>
 
   <script>
-    // ===== Tabela base dos kits =====
     const TABELA = [
-      { kwh: 500,  kwp: 4.865,  mod: 7,  qInv: 1, inversor: 'INVERSOR HUAWEI 5KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 14461.47 },
-      { kwh: 600,  kwp: 5.56,   mod: 8,  qInv: 1, inversor: 'INVERSOR HUAWEI 5KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 14773.78 },
-      { kwh: 700,  kwp: 6.95,   mod: 10, qInv: 1, inversor: 'INVERSOR HUAWEI 6KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 17110.70 },
-      { kwh: 900,  kwp: 8.34,   mod: 12, qInv: 1, inversor: 'INVERSOR HUAWEI 6KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 18992.52 },
-      { kwh: 1000, kwp: 9.73,   mod: 14, qInv: 1, inversor: 'INVERSOR HUAWEI 7.5 KW', modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 22311.46 },
-      { kwh: 1200, kwp: 11.12,  mod: 16, qInv: 1, inversor: 'INVERSOR HUAWEI 7.5 KW', modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 24314.10 },
-      { kwh: 1300, kwp: 12.51,  mod: 18, qInv: 1, inversor: 'INVERSOR HUAWEI 10 KW', modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 27178.70 },
-      { kwh: 1500, kwp: 13.90,  mod: 20, qInv: 1, inversor: 'INVERSOR HUAWEI 10 KW', modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 29181.32 },
-      { kwh: 1600, kwp: 15.29,  mod: 22, qInv: 2, inversor: 'INVERSOR HUAWEI 6 KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 33459.43 },
-      { kwh: 1700, kwp: 15.985, mod: 23, qInv: 2, inversor: 'INVERSOR HUAWEI 6 KW',  modulo: 'TRINA SOLAR 695W - NTYPE-TIER1', preco: 34466.71 },
+      { kwh:500, kwp:4.865, mod:7, qInv:1, inversor:'INVERSOR HUAWEI 5KW', modulo:'TRINA SOLAR 695W', preco:14461.47 },
+      { kwh:700, kwp:6.95, mod:10, qInv:1, inversor:'INVERSOR HUAWEI 6KW', modulo:'TRINA SOLAR 695W', preco:17110.70 }
+      // ...adicione os demais kits
     ];
 
-    // ===== UI / Bindings =====
-    const selKwh = document.getElementById('in-kwh');
+    const selKwh=document.getElementById('in-kwh');
     function fmtBRL(n){return n.toLocaleString('pt-BR',{style:'currency',currency:'BRL'});}
-    function preencherSelect(){
-      selKwh.innerHTML = TABELA.map(r=>{
-        const preco = fmtBRL(r.preco);
-        const kwp = r.kwp.toLocaleString('pt-BR');
-        return `<option value="${r.kwh}">${r.kwh} kWh — ${r.mod}x ${r.modulo} — ${r.qInv}x ${r.inversor} — ${kwp} kWp — ${preco}</option>`;
-      }).join('');
-    }
-    preencherSelect();
+    selKwh.innerHTML=TABELA.map(r=>`<option value=\"${r.kwh}\">${r.kwh} kWh — ${r.mod}x ${r.modulo} — ${r.qInv}x ${r.inversor} — ${fmtBRL(r.preco)}</option>`).join('');
 
-    document.getElementById('in-kwh-free').addEventListener('input', (e)=>{
-      const v = Number(e.target.value);
-      if(!isNaN(v) && v>0){
-        const r = buscarMaisProximo(v);
-        selKwh.value = String(r.kwh);
-        atualizar(v);
-      }
-    });
-    selKwh.addEventListener('change', e=>atualizar(Number(e.target.value)));
-
-    document.getElementById('in-data').value = new Date().toLocaleDateString('pt-BR');
-    document.getElementById('in-obs').addEventListener('input',(e)=>{document.getElementById('out-obs').textContent=e.target.value;});
-    ['in-cliente','in-cidade','in-data'].forEach(id=> document.getElementById(id).addEventListener('input', sync));
-
-    function sync(){
-      document.getElementById('out-cliente').textContent = document.getElementById('in-cliente').value || '—';
-      document.getElementById('out-cidade').textContent  = document.getElementById('in-cidade').value || '—';
-      document.getElementById('out-data').textContent    = document.getElementById('in-data').value || '—';
-    }
-
-    function buscarMaisProximo(v){
-      const ex = TABELA.find(r=>r.kwh===v);
-      if(ex) return ex;
-      return TABELA.reduce((p,c)=> Math.abs(c.kwh-v) < Math.abs(p.kwh-v) ? c : p, TABELA[0]);
-    }
-
+    function buscarMaisProximo(v){return TABELA.reduce((p,c)=>Math.abs(c.kwh-v)<Math.abs(p.kwh-v)?c:p,TABELA[0]);}
     function atualizar(kwh){
-      const r = buscarMaisProximo(kwh);
-      document.getElementById('out-kwh').textContent = `${kwh} kWh/mês`;
-      document.getElementById('out-kwp').textContent = `${r.kwp.toLocaleString('pt-BR')} kWp`;
-      document.getElementById('out-mod').textContent = r.mod;
-      document.getElementById('out-qinv').textContent = r.qInv;
-      document.getElementById('out-inv').textContent = r.inversor;
-      document.getElementById('out-modulo').textContent = r.modulo;
-      document.getElementById('out-inv-list').textContent = `${r.qInv}x ${r.inversor}`;
-      document.getElementById('out-mod-list').textContent = `${r.mod}x ${r.modulo}`;
-      document.getElementById('out-preco').textContent = fmtBRL(r.preco);
-      [...selKwh.options].forEach(o=>{if(Number(o.value)===r.kwh) selKwh.value=o.value;});
+      const r=buscarMaisProximo(kwh);
+      document.getElementById('out-kwh').textContent=`${kwh} kWh/mês`;
+      document.getElementById('out-kwp').textContent=`${r.kwp} kWp`;
+      document.getElementById('out-mod').textContent=r.mod;
+      document.getElementById('out-qinv').textContent=r.qInv;
+      document.getElementById('out-inv').textContent=r.inversor;
+      document.getElementById('out-modulo').textContent=r.modulo;
+      document.getElementById('out-inv-list').textContent=`${r.qInv}x ${r.inversor}`;
+      document.getElementById('out-mod-list').textContent=`${r.mod}x ${r.modulo}`;
+      document.getElementById('out-preco').textContent=fmtBRL(r.preco);
     }
+    selKwh.addEventListener('change',e=>atualizar(Number(e.target.value)));
+    atualizar(500);
 
-    // inicial
-    sync(); selKwh.value='700'; atualizar(700);
-
-    // ===== Helper: adiciona imagem no PDF “contain” (sem cortar) =====
-    async function addFitImageToPdf(doc, imgData, addPage=false){
-      if(addPage) doc.addPage();
-      const img = new Image();
-      img.src = imgData;
-      await img.decode();
-
-      const iw = img.width, ih = img.height;
-      const pageW = doc.internal.pageSize.getWidth();
-      const pageH = doc.internal.pageSize.getHeight();
-
-      const scale = Math.min(pageW / iw, pageH / ih); // cabe nos 2 eixos
-      const w = iw * scale, h = ih * scale;
-      const x = (pageW - w) / 2, y = (pageH - h) / 2;
-
-      doc.addImage(imgData, 'PNG', x, y, w, h);
-    }
-
-    // ===== Exportar PDF (ajustado) =====
+    // === Exportar PDF (A4 igual em todos devices) ===
     document.getElementById('btn-pdf').addEventListener('click', async ()=>{
       const { jsPDF } = window.jspdf;
+      const A4W=794,A4H=1123,PR=2.0;
+      const opts={backgroundColor:'#fff',pixelRatio:PR,width:A4W,height:A4H,style:{width:A4W+'px',height:A4H+'px'}};
+      const p1=await htmlToImage.toPng(document.getElementById('page1'),opts);
+      const p2=await htmlToImage.toPng(document.getElementById('page2'),opts);
 
-      // Se ainda cortar no iPhone, reduza para 1.5
-      const opts = { backgroundColor:'#fff', pixelRatio: 2.0 };
+      const doc=new jsPDF({orientation:'p',unit:'mm',format:'a4'});
+      const pageW=doc.internal.pageSize.getWidth();
+      const pageH=doc.internal.pageSize.getHeight();
+      doc.addImage(p1,'PNG',0,0,pageW,pageH);
+      doc.addPage();
+      doc.addImage(p2,'PNG',0,0,pageW,pageH);
 
-      const p1 = await htmlToImage.toPng(document.getElementById('page1'), opts);
-      const p2 = await htmlToImage.toPng(document.getElementById('page2'), opts);
-
-      const doc = new jsPDF({orientation:'p', unit:'mm', format:'a4'});
-
-      await addFitImageToPdf(doc, p1, false);
-      await addFitImageToPdf(doc, p2, true);
-
-      const nome = (document.getElementById('in-cliente').value || 'Cliente').replace(/\s+/g,'_');
-      const kwh  = (document.getElementById('out-kwh').textContent.split(' ')[0]);
+      const nome=(document.getElementById('in-cliente').value||'Cliente').replace(/\\s+/g,'_');
+      const kwh=(document.getElementById('out-kwh').textContent.split(' ')[0]);
       doc.save(`Proposta_${nome}_${kwh}kWh.pdf`);
     });
 
-    // PWA: registra o Service Worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', ()=> navigator.serviceWorker.register('service-worker.js'));
+    if('serviceWorker'in navigator){
+      window.addEventListener('load',()=>navigator.serviceWorker.register('service-worker.js'));
     }
   </script>
 </body>
